--- a/resources/templateProperties/LogTemplate.properties
+++ b/resources/templateProperties/LogTemplate.properties
@@ -8,3 +8,8 @@ fl_call_times_enough=报警电话次数已达上限，门店：{0}，报警：{1
 #watchDog.property.message.CommonMsgLogTemplate
 cl_start={0} start...
 cl_end={0} end...
+#watchDog.property.template.WechatDeptLogTemplate
+wd_soldier_desc_update=士兵组描述更新：id：{0}，更新前：{1}，更新后：{2}。
+wd_officer_desc_update=军官组描述更新：id：{0}，更新前：{1}，更新后：{2}。
+wd_soldier_update_failed=士兵组更新失败：id：{0}，原因：{1}。
+wd_officer_update_failed=军官组更新失败：id：{0}，原因：{1}。
