--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
           <scope>system</scope>
           <systemPath>${project.basedir}/lib/support.jar</systemPath>
         </dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
