--- a/pom.xml
+++ b/pom.xml
@@ -87,18 +87,25 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-        <dependency>
-          <groupId>support</groupId>
-          <artifactId>carel-support</artifactId>
-          <version>1.0.0</version>
-          <scope>system</scope>
-          <systemPath>${project.basedir}/lib/support.jar</systemPath>
-        </dependency>
+		<dependency>
+			<groupId>support</groupId>
+			<artifactId>carel-support</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/support.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
