--- a/resources/templateProperties/WechatMsgTemplate.properties
+++ b/resources/templateProperties/WechatMsgTemplate.properties
@@ -1,18 +1,18 @@
 #watchDog.config.property.FaxMsgLogTemplate
-fm_send=\u62a5\u8b66\u7535\u8bdd\u63d0\u793a\u260e\n\u95e8\u5e97\uff1a{0}\n\u539f\u56e0\uff1a{1}\n\u8bbe\u5907\uff1a{2}\u63d0\u9192\uff1a{3}\u5c06\u4f1a\u6536\u5230\u7535\u8bdd\n\u8fd9\u662f\u7b2c{4}\u6b21\u63d0\u9192{5}
+fm_send=报警电话提示\n门店：{0}\n原因：{1}\n设备：{2}提醒：{3}将会收到电话\n这是第{4}次提醒{5}
 #watchDog.config.property.WechatMemberMsgTemplate
-mm_no_soldier=IP\uff1a{0}\n\u95e8\u5e97\uff1a{1}\n\u63d0\u9192\uff1a\u58eb\u5175\u7ec4\u672a\u914d\u7f6e\n\u5382\u5546\uff1a{2}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u58eb\u5175\u7ec4\u662f\u5426\u5df2\u914d\u7f6e
-mm_no_officer=IP\uff1a{0}\n\u95e8\u5e97\uff1a{1}\n\u63d0\u9192\uff1a\u519b\u5b98\u7ec4\u672a\u914d\u7f6e\n\u5382\u5546\uff1a{2}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u519b\u5b98\u7ec4\u662f\u5426\u5df2\u914d\u7f6e
-mm_wrong_soldier=IP\uff1a{0}\n\u95e8\u5e97\uff1a{1}\n\u63d0\u9192\uff1a\u58eb\u5175\u7ec4\u672a\u6b63\u786e\u914d\u7f6e\n\u5382\u5546\uff1a{2}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u58eb\u5175\u7ec4\u662f\u5426\u5df2\u6b63\u786e\u914d\u7f6e
-mm_wrong_officer=IP\uff1a{0}\n\u95e8\u5e97\uff1a{1}\n\u63d0\u9192\uff1a\u519b\u5b98\u7ec4\u672a\u6b63\u786e\u914d\u7f6e\n\u5382\u5546\uff1a{2}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u519b\u5b98\u7ec4\u662f\u5426\u5df2\u6b63\u786e\u914d\u7f6e
-mm_no_person=IP\uff1a{0}\n\u95e8\u5e97\uff1a{1}\n\u63d0\u9192\uff1a\u4eba\u5458\u672a\u914d\u7f6e\n\u5382\u5546\uff1a{2}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u58eb\u5175\u7ec4\u548c\u519b\u5b98\u7ec4\u662f\u5426\u5df2\u914d\u7f6e
-mm_welcome_new=\u6b22\u8fce\u65b0\u6210\u5458\ud83d\udc68\n\u95e8\u5e97\uff1a{0}\n\u65b0\u6210\u5458\uff1a{1}\n\u58eb\u5175\u7ec4\uff1a{2}\n\u519b\u5b98\u7ec4\uff1a{3}
+mm_no_soldier=IP：{0}\n门店：{1}\n提醒：士兵组未配置\n厂商：{2}\n建议：请检查士兵组是否已配置
+mm_no_officer=IP：{0}\n门店：{1}\n提醒：军官组未配置\n厂商：{2}\n建议：请检查军官组是否已配置
+mm_wrong_soldier=IP：{0}\n门店：{1}\n提醒：士兵组未正确配置\n厂商：{2}\n建议：请检查士兵组是否已正确配置
+mm_wrong_officer=IP：{0}\n门店：{1}\n提醒：军官组未正确配置\n厂商：{2}\n建议：请检查军官组是否已正确配置
+mm_no_person=IP：{0}\n门店：{1}\n提醒：人员未配置\n厂商：{2}\n建议：请检查士兵组和军官组是否已配置
+mm_welcome_new=欢迎新成员\n门店：{0}\n新成员：{1}\n士兵组：{2}\n军官组：{3}
 #watchDog.config.property.CompanyServiceMsgLogTemplate
-csm_renew=\u670d\u52a1\u5373\u5c06\u5230\u671f\u23f3\n\u95e8\u5e97\uff1a{0}\n\u5230\u671f\u65f6\u95f4\uff1a{1}\n\u63d0\u9192\uff1a\u5230\u671f\u5c06\u4f1a\u505c\u6b62\u670d\u52a1\uff0c\u4e3a\u4fdd\u8bc1\u60a8\u6b63\u5e38\u4f7f\u7528\u8bf7\u5c3d\u5feb\u7eed\u8d39
-csm_inquiry=\u670d\u52a1\u5373\u5c06\u5230\u671f\u23f3\n\u95e8\u5e97\uff1a{0}\n\u5230\u671f\u65f6\u95f4\uff1a{1}\n\u63d0\u9192\uff1a\u5230\u671f\u5c06\u4f1a\u505c\u6b62\u670d\u52a1\uff0c\u70e6\u8bf7\u54a8\u8be2\u5ba2\u6237\u662f\u5426\u7eed\u8d39
-csm_stop=\u670d\u52a1\u5df2\u5230\u671f\u231b\n\u95e8\u5e97\uff1a{0}\n\u5230\u671f\u65f6\u95f4\uff1a{1}\n\u63d0\u9192\uff1a\u670d\u52a1\u5df2\u505c\u6b62,\u670d\u52a1\u5668\u914d\u7f6e\u6570\u636e\u5c06\u4fdd\u7559\u4e00\u4e2a\u6708
+csm_renew=服务即将到期⏳\n门店：{0}\n到期时间：{1}\n提醒：到期将会停止服务，为保证您正常使用请尽快续费
+csm_inquiry=服务即将到期⏳\n门店：{0}\n到期时间：{1}\n提醒：到期将会停止服务，烦请咨询客户是否续费
+csm_stop=服务已到期⌛\n门店：{0}\n到期时间：{1}\n提醒：服务已停止,服务器配置数据将保留一个月
 #watchDog.config.property.OfflineMsgLogTemplate
-om_router=\u8def\u7531\u5668\u79bb\u7ebf\ud83d\udcf6\n\u95e8\u5e97\uff1a{0}\nIP\uff1a{1}\n\u63d0\u9192\uff1a\u8def\u7531\u5668\u79bb\u7ebf\n\u5de5\u7a0b\u5546:{2}\n\u79bb\u7ebf\u65f6\u957f:{3}\u5c0f\u65f6\n\u5efa\u8bae\uff1a\u68c0\u67e5\u8def\u7531\u5668
-om_site=\u76d1\u63a7\u673a\u65e0\u6cd5\u8bbf\u95ee\u26d4\n\u95e8\u5e97\uff1a{0}\nIP\uff1a{1}\n\u5efa\u8bae\uff1a\u8bf7\u68c0\u67e5\u8def\u7531\u5668\u548c\u76d1\u63a7\u4e3b\u673a\u8fde\u63a5
-fm_simple_calling_new=\u65b0\u62a5\u8b66\u260e\n\n\u95e8\u5e97\uff1a{0}\n{1}\n\u63d0\u9192\uff1a{2}\u5c06\u4f1a\u6536\u5230\u7535\u8bdd\n{3}\n{4}
-fm_simple_calling_repeat=\u62a5\u8b66\u672a\u53ca\u65f6\u5904\u7406{0}\u260e\n\n\u95e8\u5e97\uff1a{1}\n{2}\n\u63d0\u9192\uff1a{3}\u5c06\u4f1a\u6536\u5230\u7535\u8bdd\n{4}\n{5}
+om_router=路由器离线\n门店：{0}\nIP：{1}\n提醒：路由器离线\n工程商:{2}\n离线时长:{3}小时\n建议：检查路由器
+om_site=监控机无法访问⛔\n门店：{0}\nIP：{1}\n建议：请检查路由器和监控主机连接
+fm_simple_calling_new=新报警\n\n门店：{0}\n{1}\n提醒：{2}将会收到电话\n{3}\n{4}
+fm_simple_calling_repeat=报警未及时处理{0}\n\n门店：{1}\n{2}\n提醒：{3}将会收到电话\n{4}\n{5}
