--- a/resources/templateProperties/MailTemplate.properties
+++ b/resources/templateProperties/MailTemplate.properties
@@ -1,5 +1,6 @@
 #watchDog.property.template.MailTemplate
 mail_oos_title=【每周提醒】服务即将到期门店
 mail_oos_content=<h4>您好！以下门店将于{0}个月之后停止服务</h4><br>
+mail_oos_content_already=<h4>您好！以下门店将于已停止服务</h4><br>
 mail_oos_body=门店：{0}，  客户：{1}，  工程商：{2}，  服务截止日期：{3}<br>
 mail_oos_empty=本次检查无服务过期门店。
