--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>4.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.31.Final</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
