--- a/pom.xml
+++ b/pom.xml
@@ -123,12 +123,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>4.6</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.4.17.Final</version>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.4.4.Final</version>
 		</dependency>
+
 
 	</dependencies>
 
