--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,9 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-		<dependency>
-			<groupId>support</groupId>
-			<artifactId>carel-support</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/support.jar</systemPath>
-		</dependency>
+		<!-- <dependency> <groupId>support</groupId> <artifactId>carel-support</artifactId> 
+			<version>1.0.0</version> <scope>system</scope> <systemPath>${project.basedir}/lib/support.jar</systemPath> 
+			</dependency> -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
@@ -129,6 +125,13 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.4.4.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.4.Final</version>
+		</dependency>
+
 
 
 	</dependencies>
