--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-		<!-- <dependency> <groupId>support</groupId> <artifactId>carel-support</artifactId> 
-			<version>1.0.0</version> <scope>system</scope> <systemPath>${project.basedir}/lib/support.jar</systemPath> 
-			</dependency> -->
+		<dependency>
+			<groupId>support</groupId>
+			<artifactId>carel-support</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/support.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
