--- a/resources/templateProperties/DanfossSQL.properties
+++ b/resources/templateProperties/DanfossSQL.properties
@@ -2,3 +2,6 @@ watchDog.danfoss.service.impl.SupervisorServiceImpl.findOneByIp=SELECT s FROM Su
 watchDog.danfoss.service.impl.DeviceServiceImpl.findAllByIp=SELECT d FROM Device d \
 INNER JOIN Supervisor s ON d.supervisor.id = s.id \
 WHERE s.ip = {0}
+watchDog.danfoss.service.impl.AlarmServiceImpl.findAlarmsByDeviceId=SELECT a FROM Alarm a \
+INNER JOIN Device d ON d.id = a.device.id \
+WHERE d.id = {0}
