--- a/resources/templateProperties/DanfossSQL.properties
+++ b/resources/templateProperties/DanfossSQL.properties
@@ -1,4 +1,5 @@
 watchDog.danfoss.service.impl.SupervisorServiceImpl.findOneByIp=SELECT s FROM Supervisor s WHERE ip = {0} 
+watchDog.danfoss.service.impl.SupervisorServiceImpl.findAll=SELECT s FROM Supervisor s
 watchDog.danfoss.service.impl.DeviceServiceImpl.findAllByIp=SELECT d FROM Device d \
 INNER JOIN Supervisor s ON d.supervisor.id = s.id \
 WHERE s.ip = {0}
